Bug 879168 - IonMonkey: Improve the typeset of |this| when inlining a constructing call, r=bhackett